--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -46,7 +46,7 @@ body {
 	margin: 130px 0 40px 0;
 	position: relative;
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-	            0 25px 50px 0 rgba(0, 0, 0, 0.1);
+		0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
 .todoapp input::-webkit-input-placeholder {
@@ -103,7 +103,7 @@ body {
 	padding: 16px 16px 16px 60px;
 	border: none;
 	background: rgba(0, 0, 0, 0.003);
-	box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
+	box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
 }
 
 .main {
@@ -115,14 +115,26 @@ body {
 .toggle-all {
 	width: 1px;
 	height: 1px;
-	border: none; /* Mobile Safari */
+	border: none;
+	/* Mobile Safari */
 	opacity: 0;
 	position: absolute;
 	right: 100%;
 	bottom: 100%;
 }
 
-.toggle-all + label {
+.toggle-all-today {
+	width: 1px;
+	height: 1px;
+	border: none;
+	/* Mobile Safari */
+	opacity: 0;
+	position: absolute;
+	right: 100%;
+	bottom: 100%;
+}
+
+.toggle-all+label {
 	width: 60px;
 	height: 34px;
 	font-size: 0;
@@ -133,16 +145,40 @@ body {
 	transform: rotate(90deg);
 }
 
-.toggle-all + label:before {
+.toggle-all-today+label {
+	width: 60px;
+	height: 34px;
+	font-size: 0;
+	position: absolute;
+	top: -52px;
+	left: -13px;
+	-webkit-transform: rotate(90deg);
+	transform: rotate(90deg);
+}
+
+.toggle-all+label:before {
 	content: '❯';
 	font-size: 22px;
 	color: #e6e6e6;
 	padding: 10px 27px 10px 27px;
 }
 
-.toggle-all:checked + label:before {
+.toggle-all-today+label:before {
+	content: '❯';
+	font-size: 22px;
+	color: #e6e6e6;
+	padding: 10px 27px 10px 27px;
+}
+
+.toggle-all:checked+label:before {
 	color: #737373;
 }
+
+.toggle-all-today:checked+label:before {
+	color: #737373;
+}
+
+
 
 .todo-list {
 	margin: 0;
@@ -185,32 +221,59 @@ body {
 	top: 0;
 	bottom: 0;
 	margin: auto 0;
-	border: none; /* Mobile Safari */
+	border: none;
+	/* Mobile Safari */
 	-webkit-appearance: none;
 	appearance: none;
 }
 
+.todo-list li .toggle-today {
+	text-align: center;
+	width: 40px;
+	/* auto, since non-WebKit browsers doesn't support input styling */
+	height: 40px;
+	position: absolute;
+	top: 0;
+	left: 30px;
+	bottom: 20px;
+	margin: 9px 0;
+	padding: 50px;
+	border: none;
+	/* Mobile Safari */
+	opacity: 0.3;
+	border-radius: 50%;
+
+}
+
+ 
 .todo-list li .toggle {
 	opacity: 0;
 }
 
-.todo-list li .toggle + label {
+
+
+
+
+
+.todo-list li .toggle+label {
 	/*
 		Firefox requires `#` to be escaped - https://bugzilla.mozilla.org/show_bug.cgi?id=922433
 		IE and Edge requires *everything* to be escaped to render, so we do that instead of just the `#` - https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/7157459/
 	*/
-	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
+	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2230%22%20height%3D%2230%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
 	background-repeat: no-repeat;
 	background-position: center left;
 }
 
-.todo-list li .toggle:checked + label {
+
+.todo-list li .toggle:checked+label {
 	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
+
 .todo-list li label {
 	word-break: break-all;
-	padding: 15px 15px 15px 60px;
+	padding: 15px 15px 15px 70px;
 	display: block;
 	line-height: 1.2;
 	transition: color 0.4s;
@@ -220,6 +283,7 @@ body {
 	color: #d9d9d9;
 	text-decoration: line-through;
 }
+
 
 .todo-list li .destroy {
 	display: none;
@@ -273,15 +337,24 @@ body {
 	height: 50px;
 	overflow: hidden;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
-	            0 8px 0 -3px #f6f6f6,
-	            0 9px 1px -3px rgba(0, 0, 0, 0.2),
-	            0 16px 0 -6px #f6f6f6,
-	            0 17px 2px -6px rgba(0, 0, 0, 0.2);
+		0 8px 0 -3px #f6f6f6,
+		0 9px 1px -3px rgba(0, 0, 0, 0.2),
+		0 16px 0 -6px #f6f6f6,
+		0 17px 2px -6px rgba(0, 0, 0, 0.2);
 }
+
 
 .todo-count {
 	float: left;
-	text-align: left;
+	text-align: center;
+	background-color: #777;
+	color:white;
+
+	border-radius: 10px;
+	font-size: 9px; /* 文字のサイズを小さくする */
+  height: 20px; /* 高さを指定 */
+  min-width: 70px; /* 幅を指定 */
+
 }
 
 .todo-count strong {
@@ -293,12 +366,13 @@ body {
 	padding: 0;
 	list-style: none;
 	position: absolute;
-	right: 0;
-	left: 0;
+	right: 0px;
+	left: 20px;
 }
 
 .filters li {
 	display: inline;
+
 }
 
 .filters li a {
@@ -308,6 +382,7 @@ body {
 	text-decoration: none;
 	border: 1px solid transparent;
 	border-radius: 3px;
+
 }
 
 .filters li a:hover {
@@ -358,6 +433,7 @@ html .clear-completed:active {
 	Can't use it globally since it destroys checkboxes in Firefox
 */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
+
 	.toggle-all,
 	.todo-list li .toggle {
 		background: none;
@@ -376,4 +452,13 @@ html .clear-completed:active {
 	.filters {
 		bottom: 10px;
 	}
+}
+
+.today {
+	color: red;
+}
+
+.today-button {
+float:right;
+
 }
